// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetails /> for user1 should render and test snapshot 1`] = `
<div>
  <img
    alt="bojackhorseman profile"
    src="https://media.giphy.com/media/3o7WTHb2WjEXbsmWDS/giphy.gif"
    style={
      Object {
        "borderRadius": "500px",
        "display": "block",
        "height": "210px",
        "margin": " 15px auto",
        "width": "210px",
      }
    }
  />
  <h1
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      href="/bojackhorseman"
      rel="noopener noreferrer"
      target="_blank"
    >
      Bojack Horseman
    </a>
  </h1>
  <div
    style={
      Object {
        "height": "50px",
        "margin": "auto",
        "width": "96%",
      }
    }
  >
    <a
      href="https://twitter.com/bojacktwitter"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="twitter logo"
        src=""
        style={
          Object {
            "margin": "5px 15px 15px 0px",
            "width": "30px",
          }
        }
      />
    </a>
    <a
      href="https://github.com/bojackgithub"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="github logo"
        src=""
        style={
          Object {
            "margin": "5px 15px 15px 0px",
            "width": "30px",
          }
        }
      />
    </a>
    <a
      href="http://bojackhorseman.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="external link icon"
        class="external-link-img"
        src=""
        style={
          Object {
            "margin": "5px 15px 15px 0px",
            "width": "30px",
          }
        }
      />
    </a>
  </div>
  <div
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    I am the Bojack Horseman from Horsing Around and Secreteriat
  </div>
  <div
    class="activechatchannel__activecontentuserdetails"
  >
    <div>
      <div
        class="key"
      >
        location
      </div>
      <div
        class="value"
      >
        Los Angeles, CA
      </div>
    </div>
    <div
      class="key"
    >
      joined
    </div>
    <div
      class="value"
    >
      January 2, 1964
    </div>
  </div>
  <div
    class="userdetails__blockreport"
  />
  <div
    id="userdetails__reportabuse"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      class="userdetails__reportabuse"
    >
      <p>
        Reporting abuse will: 
      </p>
      <ul>
        <li>
          close this chat and prevent this user from re-opening chat with you
        </li>
        <li>
          give the DEV team your consent to read messages in this chat to understand your report and take appropriate action
        </li>
      </ul>
      <p>
        Blocking is only on Connect right now and has not been implemented across DEV yet.
      </p>
      <h5>
        Are you sure?
      </h5>
      <a
        href="/report-abuse"
        onClick={[Function]}
        tabIndex="0"
      >
        Yes, Report
      </a>
      <a
        class="no"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
      >
        No
      </a>
    </div>
  </div>
  <div
    id="userdetails__blockmsg"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      class="userdetails__blockmsg"
    >
      <p>
        Blocking on connect will: 
      </p>
      <ul>
        <li>
          close this chat and prevent this user from re-opening chat with you
        </li>
        <li>
          NOT notify the user you will block--this channel will become inaccessible for both users
        </li>
      </ul>
      <p>
        Blocking is only on Connect right now and has not been implemented across DEV yet. Consider reporting abuse to the DEV team if this user is spamming or harassing elsewhere on dev.to, so we can take further action.
      </p>
      <h5>
        Are you sure?
      </h5>
      <a
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
      >
        Yes, Block
      </a>
      <a
        class="no"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
      >
        No
      </a>
    </div>
  </div>
</div>
`;

exports[`<UserDetails /> for user2 should render and test snapshot 1`] = `
<div>
  <img
    alt="mrpeanutbutter profile"
    src="https://media.giphy.com/media/xThuW6sWCGbpZMpX7a/giphy.gif"
    style={
      Object {
        "borderRadius": "500px",
        "display": "block",
        "height": "210px",
        "margin": " 15px auto",
        "width": "210px",
      }
    }
  />
  <h1
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      href="/mrpeanutbutter"
      rel="noopener noreferrer"
      target="_blank"
    >
      Mr. Peanutbutter
    </a>
  </h1>
  <div
    style={
      Object {
        "height": "50px",
        "margin": "auto",
        "width": "96%",
      }
    }
  >
    <a
      href="https://twitter.com/mrpbtwitter"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="twitter logo"
        src=""
        style={
          Object {
            "margin": "5px 15px 15px 0px",
            "width": "30px",
          }
        }
      />
    </a>
    <a
      href="https://github.com/mrpbgithub"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="github logo"
        src=""
        style={
          Object {
            "margin": "5px 15px 15px 0px",
            "width": "30px",
          }
        }
      />
    </a>
    <a
      href="http://mrpeanutbutter.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="external link icon"
        class="external-link-img"
        src=""
        style={
          Object {
            "margin": "5px 15px 15px 0px",
            "width": "30px",
          }
        }
      />
    </a>
  </div>
  <div
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    Woof Woof *smile*
  </div>
  <div
    class="activechatchannel__activecontentuserdetails"
  >
    <div>
      <div
        class="key"
      >
        location
      </div>
      <div
        class="value"
      >
        Los Angeles, DO(G)
      </div>
    </div>
    <div
      class="key"
    >
      joined
    </div>
    <div
      class="value"
    >
      1960s
    </div>
  </div>
  <div
    class="userdetails__blockreport"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      Block User
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      Report Abuse
    </button>
  </div>
  <div
    id="userdetails__reportabuse"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      class="userdetails__reportabuse"
    >
      <p>
        Reporting abuse will: 
      </p>
      <ul>
        <li>
          close this chat and prevent this user from re-opening chat with you
        </li>
        <li>
          give the DEV team your consent to read messages in this chat to understand your report and take appropriate action
        </li>
      </ul>
      <p>
        Blocking is only on Connect right now and has not been implemented across DEV yet.
      </p>
      <h5>
        Are you sure?
      </h5>
      <a
        href="/report-abuse"
        onClick={[Function]}
        tabIndex="0"
      >
        Yes, Report
      </a>
      <a
        class="no"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
      >
        No
      </a>
    </div>
  </div>
  <div
    id="userdetails__blockmsg"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      class="userdetails__blockmsg"
    >
      <p>
        Blocking on connect will: 
      </p>
      <ul>
        <li>
          close this chat and prevent this user from re-opening chat with you
        </li>
        <li>
          NOT notify the user you will block--this channel will become inaccessible for both users
        </li>
      </ul>
      <p>
        Blocking is only on Connect right now and has not been implemented across DEV yet. Consider reporting abuse to the DEV team if this user is spamming or harassing elsewhere on dev.to, so we can take further action.
      </p>
      <h5>
        Are you sure?
      </h5>
      <a
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
      >
        Yes, Block
      </a>
      <a
        class="no"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
      >
        No
      </a>
    </div>
  </div>
</div>
`;
